# abis-portal

./: .funcignore  README-Azure-Functionapp.md  README.md  Taskfile.yml  function_app.py  lambda.Dockerfile  lambda_function.py  main.py  package-lock.json  pyproject.toml  requirements.txt  staticwebapp.config.json  tern.ttl
.github/workflows/: azure-static-web-apps-polite-pond-02e1be600.yml  azure-static-web-apps-proud-river-0f8a1c400.yml  build.yml  deploy.yml  deploy.yml.ignore
abis-portal-ui/: README.md  package-lock.json  package.json  vite.config.ts
abis-portal-ui/src/: examples.ts  main.ts
abis-portal-ui/src/components/: Footer.vue  Validator.vue
abis-portal-ui/src/router/: index.ts
abis-portal-ui/src/views/: AboutView.vue  HomeView.vue  ProfilesView.vue  SytemView.vue
abis_portal/: app.py  fetch.py  models.py  settings.py  validate.py  validate_json.py
abis_portal/router/: __init__.py  system.py  ui.py  validate.py
abis_portal/validators/: abis.ttl
geochem-portal-ui/: README.md  index.html  package-lock.json  package.json
geochem-portal-ui/public/: globals.css  style.css
geochem-portal-ui/src/: App.vue  examples.ts  types.ts
geochem-portal-ui/src/assets/: main.css  qld-validator.ttl
geochem_portal/: app.py  fetch.py  queries.py  settings.py  validate.py  validate_json.py
geochem_portal/data_files/: analytical-methods-for-geochemistry.ttl  geou.ttl  observable-properties.ttl  oc-to-o.sparql  sample-types.ttl
geochem_portal/router/: system.py  ui.py  validate.py
geochem_portal/static/: index.html
tests/: test_validate.py
(+18 files in other folders)
